Update fuzzy matching logic changes from Kate

The algorithm has been updated in Kate, this patch upstreams all the
improvements. Most notably, it now tries to prefer sequential matches
and matches that happen at the start of a word

BUG: 511664